package rpg;

public class CoolingBox extends TemperatureDevice{
}
