package rpg;

public class Oven extends TemperatureDevice{
}
