package rpg;

public class Transmogrifier extends Device{
}
