package rpg.recipe;

/**
 * An enumeration of operations.
 *
 * @author 	Vincent Van Schependom
 * @author	Arne Claerhout
 * @author 	Flor De Meulemeester
 *
 * @version 1.0
 */
public enum Operation {

	ADD, HEAT, COOL, MIX

}
