package rpg.storage;

public class Laboratory extends StorageLocation{
}
